--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">My weather App</string>
     <string name="st_paul_mn">St. Paul, MN</string>
-    <string name="temperature">75°</string>
-    <string name="feelsLikeDescription">Feels like 78°</string>
-    <string name="low">Low 65°</string>
-    <string name="high">High 80°</string>
-    <string name="humidity">Humidity 100%</string>
-    <string name="presure">Pressure 1023 hPa</string>
+    <string name="temperature">%1$d°</string>
+    <string name="feelsLikeDescription">Feels like %1$d°</string>
+    <string name="low">Low %1$d°</string>
+    <string name="high">High %1$d°</string>
+    <string name="humidity">Humidity %1$d%%</string>
+    <string name="presure">Pressure %1$d hPa</string>
     <string name="forecast_button">Forecast</string>
     <string name="forecast_temp">Temp: %.1f°</string>
     <string name="forecast_high">High: %.1f°</string>
