--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="forecast_sunrise">Sunrise: %s</string>
     <string name="forecast_sunset">Sunset: %s</string>
     <string name="ok">ok</string>
+    <string name="submit_error_dialog">error fetching data</string>
+    <string name="location_rationale">enable location services to get weather at your current location</string>
 </resources>
